--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
     border-radius: 50%;
     overflow: hidden;
     z-index: 1;
-    border: 5px solid rgba(255, 255, 255, 0.3);
+    padding: 25px;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
     animation: fadeInProfile 2s ease-out;
 }
